# aico

./: .env.anthropic.example  .env.example  .gitignore  Configuration.md  Dockerfile  Makefile  README.md  publish.py  pyproject.toml
aico/: __main__.py  backup.py  bootstrap.py  chat.py  const.py  core.py  diff.py  file_processing.py  gen.py  git.py  main.py  stats.py  utils.py
aico/tpl/: describe.j2  file-review.j2  propose.j2  self-estimate-changes.j2  task-update-file.j2
aico/tpl/part/: do-code-review.j2  expect-implement.j2
aico/tpl/project/: file_names.j2  meta-main.j2
requirements/: dev.txt  prod.txt  tests.txt
tests/int/: test_basic.py
tests/unit/: test_list_dir.py
tpl/: cr-file-gen-changes.j2  file-review-full-content.j2  one-improvement.j2
tpl/part/: do-proofreading.j2  file-expect-sections.j2  you.j2
tpl/project/: files.j2
webapp/: Makefile  app.py
webapp/static/: scripts.js  styles.css
webapp/templates/: report.html
